<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Chronometer
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="80sp" />
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stopwatch"
        android:layout_centerHorizontal="true"
        android:text="@string/status"
        android:textSize="30sp" />

    <Button
        android:id="@+id/dinamicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:backgroundTint="@color/black"
        android:text="RESPIRA"

        android:textSize="30dp" />


    <TextView
        android:id="@+id/countText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dinamicButton"
        android:layout_centerHorizontal="true"
        android:text="@string/INFLECTIONS"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/timeTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countText"
        android:layout_centerHorizontal="true"
        android:text="@string/totaltime"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/percentRespirandoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeTotalText"
        android:layout_centerHorizontal="true"
        android:text="@string/RELAX"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/percentConcentrandoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/percentRespirandoText"
        android:layout_centerHorizontal="true"
        android:text="@string/CONCENTRING"
        android:textSize="20sp" />






</RelativeLayout>